--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="shortcut icon" href="http://scriptogr.am/lib/img/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{base_url}}/feed" />
   <!--{{css}}-->
-  <link rel="stylesheet"  type="text/css" href="css/global.styles.css" />
+  <link rel="stylesheet"  type="text/css" href="http://urbanops.github.com/css/global.styles.css" />
   <script src="/themes/{{theme}}/assets/js/respond.min.js"></script>
 </head>
 	<body>
