--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 		</section>
     <section class="pagination">
-      <div class="content">{{pagination}}</div>
+      {{pagination}}
     </section>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="/themes/{{theme}}/app.js"></script>
