--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html lang="en">
 <head>
-  <title>{{author}} {{title}} on scriptogr.am</title>
+  <title>{{blog_title}} {{title}}</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -19,7 +19,7 @@
   <link rel="canonical" href="{{#posts}}{{#is_post}}{{permalink}}{{/is_post}}{{/posts}}" />
   <link rel="shortcut icon" href="http://scriptogr.am/lib/img/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{base_url}}/feed" />
-  <link rel="stylesheet" type="text/css" href="css/global.styles.css"/>
+  <link rel="stylesheet" type="text/css" href="http://urbanops.github.com/css/global.styles.css"/>
   <script src="/themes/{{theme}}/assets/js/respond.min.js"></script>
 </head>
 	<body>
