--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="canonical" href="{{#posts}}{{#is_post}}{{permalink}}{{/is_post}}{{/posts}}" />
   <link rel="shortcut icon" href="http://scriptogr.am/lib/img/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{base_url}}/feed" />
-  <link rel="stylesheet" type="text/css" href="http://urbanops.github.com/css/global.styles.css"/>
+  <link rel="stylesheet" type="text/css" href="http://urbanops.github.com/css/min.styles.css"/>
   <script src="/themes/{{theme}}/assets/js/respond.min.js"></script>
 </head>
 	<body>
