updated mailchimp placeholder

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <form action="http://hamiltonmehta.us1.list-manage.com/subscribe/post?u=56e8b3a9a964c5d1d464f4377&amp;id=b792392d0b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <h3>Receive updates</h3>
               <label for="mce-EMAIL" class="invisible">Email Address</label>
-              <input type="email" name="EMAIL" class="required email" id="mce-EMAIL">
+              <input type="email" placeholder="name@email.com" name="EMAIL" class="required email" id="mce-EMAIL">
               <div id="mce-responses" class="clear">
               <div class="response" id="mce-error-response" style="display:none"></div>
               <div class="response" id="mce-success-response" style="display:none"></div>
